fixed the file name being too long in the browser in hdfs

--- a/blur-admin/app/assets/stylesheets/hdfs.scss
+++ b/blur-admin/app/assets/stylesheets/hdfs.scss
@@ -30,6 +30,7 @@
           a {
             @include box-sizing(border-box);
             display: block;
+            width: 225px;
             overflow-x: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
